# aspnetcore/src/mynhs/Models/Glocose.cs
@@ -24,8 +24,24 @@ namespace mynhs.Models
     /// 
     /// </summary>
     [DataContract]
-    public partial class DigitalHealthCheckRequest : IEquatable<DigitalHealthCheckRequest>
+    public partial class Glocose : IEquatable<Glocose>
     { 
+        /// <summary>
+        /// Gets or Sets MmolL
+        /// </summary>
+        [Required]
+
+        [DataMember(Name="mmolL")]
+        public decimal? MmolL { get; set; }
+
+        /// <summary>
+        /// Gets or Sets BloodSugarReadingType
+        /// </summary>
+        [Required]
+
+        [DataMember(Name="bloodSugarReadingType")]
+        public string BloodSugarReadingType { get; set; }
+
         /// <summary>
         /// Returns the string presentation of the object
         /// </summary>
@@ -33,7 +49,9 @@ namespace mynhs.Models
         public override string ToString()
         {
             var sb = new StringBuilder();
-            sb.Append("class DigitalHealthCheckRequest {\n");
+            sb.Append("class Glocose {\n");
+            sb.Append("  MmolL: ").Append(MmolL).Append("\n");
+            sb.Append("  BloodSugarReadingType: ").Append(BloodSugarReadingType).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
@@ -56,20 +74,30 @@ namespace mynhs.Models
         {
             if (ReferenceEquals(null, obj)) return false;
             if (ReferenceEquals(this, obj)) return true;
-            return obj.GetType() == GetType() && Equals((DigitalHealthCheckRequest)obj);
+            return obj.GetType() == GetType() && Equals((Glocose)obj);
         }
 
         /// <summary>
-        /// Returns true if DigitalHealthCheckRequest instances are equal
+        /// Returns true if Glocose instances are equal
         /// </summary>
-        /// <param name="other">Instance of DigitalHealthCheckRequest to be compared</param>
+        /// <param name="other">Instance of Glocose to be compared</param>
         /// <returns>Boolean</returns>
-        public bool Equals(DigitalHealthCheckRequest other)
+        public bool Equals(Glocose other)
         {
             if (ReferenceEquals(null, other)) return false;
             if (ReferenceEquals(this, other)) return true;
 
-            return false;
+            return 
+                (
+                    MmolL == other.MmolL ||
+                    MmolL != null &&
+                    MmolL.Equals(other.MmolL)
+                ) && 
+                (
+                    BloodSugarReadingType == other.BloodSugarReadingType ||
+                    BloodSugarReadingType != null &&
+                    BloodSugarReadingType.Equals(other.BloodSugarReadingType)
+                );
         }
 
         /// <summary>
@@ -82,6 +110,10 @@ namespace mynhs.Models
             {
                 var hashCode = 41;
                 // Suitable nullity checks etc, of course :)
+                    if (MmolL != null)
+                    hashCode = hashCode * 59 + MmolL.GetHashCode();
+                    if (BloodSugarReadingType != null)
+                    hashCode = hashCode * 59 + BloodSugarReadingType.GetHashCode();
                 return hashCode;
             }
         }
@@ -89,12 +121,12 @@ namespace mynhs.Models
         #region Operators
         #pragma warning disable 1591
 
-        public static bool operator ==(DigitalHealthCheckRequest left, DigitalHealthCheckRequest right)
+        public static bool operator ==(Glocose left, Glocose right)
         {
             return Equals(left, right);
         }
 
-        public static bool operator !=(DigitalHealthCheckRequest left, DigitalHealthCheckRequest right)
+        public static bool operator !=(Glocose left, Glocose right)
         {
             return !Equals(left, right);
         }
